--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url= https://www.hi88vip8.com/?uagt=hib01i02&path=signup" />
-<p><a href="https://www.hi88vip8.com/?uagt=hib01i02&path=signup"> 88hi.cc </a></p>
+<meta http-equiv="refresh" content="0; url=https://www.hi88vip8.com/?uagt=hib06&path=signup" />
+<p>88hi.cc</p>
