--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://www.hi88vip8.com/?uagt=hib06&path=signup" />
+<meta http-equiv="refresh" content="0; url=https://www.hi88vip8.com/?uagt=hib06a&path=signup" />
 <p>88hi.cc</p>
